Creating a game page and styling it, as well as adding a loader to that page. Add the game.js file and get the questions data from the opentdb.com site. Creating the formattedData.js file and formatting the question data the way I wanted and adding it as a module to the game.js file.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
 
 
-    <h1>Quiz App</h1>
-    <div>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
+    <h1 class="title">Quiz App</h1>
+    <div class="container">
+        <a href="./html/game.html">Game</a>
+        <a href="./html/game.html">Category</a>
+        <a href="./html/high-scores.html">High Scores</a>
+        <a href="./html/dificulty-level.html">Dificulty Level</a>
     </div>
 </body>
 
