--- a/html/game.html
+++ b/html/game.html
@@ -6,10 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
     <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/game.css">
 </head>
 
 <body>
 
+    <div id="loader"></div>
+    <div class="container">
+        <div class="header">
+            <div>
+                <p>Question No :</p>
+                <span id="question-count">0</span>
+            </div>
+            <p class="cat-name">Category :</p>
+            <div>
+                <p> Score No :</p>
+                <span class="score-count">0</span>
+            </div>
+        </div>
+        <div class="question-box">
+            <h3 id="question-text"></h3>
+            <button class="answer-text"></button>
+            <button class="answer-text"></button>
+            <button class="answer-text"></button>
+            <button class="answer-text"></button>
+        </div>
+        <button id="finish-button">Finish</button>
+        <button id="next-button">Next</button>
+    </div>
+
+    <script type="module" src="/JS/game.js"></script>
 </body>
 
 </html>
