Show questions to the user. Showing the answer to the question when the user clicks, whether the answer to the question is correct or incorrect. Apply 10 points for each correct question. Showing the next question by clicking the Next button and fixing the bugs in this section. Enable the option to finish the game and create the end page of the questions.

--- a/html/game.html
+++ b/html/game.html
@@ -16,12 +16,12 @@
         <div class="header">
             <div>
                 <p>Question No :</p>
-                <span id="question-count">0</span>
+                <span id="question-count">1</span>
             </div>
             <p class="cat-name">Category :</p>
             <div>
                 <p> Score No :</p>
-                <span class="score-count">0</span>
+                <span id="score-count">0</span>
             </div>
         </div>
         <div class="question-box">
