Save the result of the questions in localstorage and sort it according to the points from top to bottom! And finally, on the scores.html page, a list of 10 users with high scores will be displayed in order.

--- a/html/end.html
+++ b/html/end.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <p></p>
+    <sapn id="warning">Please enter valid data!</sapn>
     <input type="text" placeholder="Enter username...">
     <button>Save</button>
     <a href="/html/game.html">Play again</a>
