--- a/html/scores.html
+++ b/html/scores.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
     <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/scores.css">
 </head>
 <body>
     
+    <h3>Scores</h3>
+    <ol></ol>
+    <a href="/">Go home</a>
+
+    <script src="/JS/scores.js"></script>
 </body>
 </html>
