--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <a href="./html/game.html">Game</a>
         <a href="./html/game.html">Category</a>
-        <a href="./html/high-scores.html">High Scores</a>
+        <a href="./html/scores.html">High Scores</a>
         <a href="./html/dificulty-level.html">Dificulty Level</a>
     </div>
 </body>
