Determination of the difficulty level of questions dynamically by the user. Also, adding a modal when data is not loaded from the server side.

--- a/html/dificulty.html
+++ b/html/dificulty.html
@@ -5,8 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
     <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/dificulty.css">
 </head>
 <body>
+
+    <h3>Select dficulty level</h3>
+    <button>Easy</button>
+    <button>Medium</button>
+    <button>Hard</button>
+    <a href="/">Go Home</a>
+
+    <script src="/JS/dificulty.js"></script>
     
 </body>
 </html>
