--- a/html/game.html
+++ b/html/game.html
@@ -11,7 +11,11 @@
 
 <body>
 
-    <div id="loader"></div>
+    <span id="loader"></span>
+    <div class="error-box">
+        <h4>Something went wrong | please try again ...</h4>
+        <button id="error-btn">Try again</button>
+    </div>
     <div class="container">
         <div class="header">
             <div>
