--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="./html/game.html">Game</a>
         <a href="./html/game.html">Category</a>
         <a href="./html/scores.html">High Scores</a>
-        <a href="./html/dificulty-level.html">Dificulty Level</a>
+        <a href="./html/dificulty.html">Dificulty Levelbutt</a>
     </div>
 </body>
 
